--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "@redux-devtools/extension": "^3.2.5",
+    "@types/react-redux": "^7.1.25",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,6 +27,7 @@
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
