--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node src/index.ts\"",
-    "build":"tsc",
+    "build": "tsc",
     "start": "node build/index.js"
   },
   "keywords": [],
@@ -27,6 +27,7 @@
     "mongoose": "^7.2.0",
     "nodemon": "^2.0.22",
     "ts-node": "^10.9.1",
+    "typescript": "^5.1.3",
     "validator": "^13.9.0"
   }
 }
