--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node src/index.ts\"",
     "build": "tsc",
-    "start": "node index.js"
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
